# Durak

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  app.py  database.py  models.py  pyproject.toml  requirements.txt
db/: env.py
durak_04_06/: pyvenv.cfg
durak_04_06/Scripts/: activate  activate.bat
env_durak_05_06/: pyvenv.cfg
env_durak_05_06/Scripts/: activate  activate.bat
env_durak_06_06/: pyvenv.cfg
env_durak_06_06/Scripts/: activate  activate.bat
instance/: spiel.db
migrations/: env.py
static/: index.js  login.js  multiplayer.js  register.js  snow.js  spielfeld.js
static/css/: album.css  base.css  join_room.css  login.css  multiplayer.css  register.css  spielfeld.css  style.css  welcome.css
templates/: base.html  index.html  join_room.html  login.html  multiplayer.html  register.html  spielfeld.html  welcome.html
